--- a/html/primera_pagina/index.html
+++ b/html/primera_pagina/index.html
@@ -71,42 +71,28 @@
 
 <nav>
     <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#CGI">CGI</a></li>
+        <li><a href="#Redirection">Redirection</a></li>
     </ul>
 </nav>
 
 <div class="container">
-    <section id="home" class="content">
+    <section id="CGI" class="content">
         <div>
             <h2>Home</h2>
-            <p>This is the homepage of WebServer. Here you will find the latest updates and news.</p>
+            <p>This is our CGI implementation of a GET method, it is a simple calculator</p>
+            <a href="http://127.0.0.1:61001/cgi-bin/calc.html" class="button">Go to CGI</a>
         </div>
     </section>
 
-    <section id="about" class="content">
+    <section id="Redirection" class="content">
         <div>
-            <h2>About</h2>
-            <p>WebServer is a comprehensive platform designed to provide you with the best web hosting solutions. Our mission is to deliver reliable and efficient services to our customers.</p>
+            <h2>Redirection</h2>
+            <p>This is a redirection to the 42 urduliz webpage</p>
+            <a href="http://127.0.0.1:61001/goto42" class="button">Go to 42</a>
         </div>
     </section>
 
-    <section id="services" class="content">
-        <div>
-            <h2>Services</h2>
-            <p>We offer a wide range of services including web hosting, domain registration, and cloud solutions. Our team is dedicated to providing you with top-notch support and services.</p>
-        </div>
-    </section>
-
-    <section id="contact" class="content">
-        <div>
-            <h2>Contact</h2>
-            <p>If you have any questions or need assistance, please don't hesitate to contact us. You can reach us via email at support@webserver.com or call us at (123) 456-7890.</p>
-        </div>
-    </section>
-</div>
 
 <footer>
     <p>&copy; 2024 WebServer. All rights reserved.</p>
