--- a/html/segunda_pagina/index.html
+++ b/html/segunda_pagina/index.html
@@ -66,7 +66,7 @@
 <body>
 
 <header>
-    <h1>Webserv: Primera Pagina</h1>
+    <h1>Webserv: Segunda Pagina</h1>
 </header>
 
 <nav>
@@ -80,7 +80,7 @@
     <section id="CGI" class="content">
         <div>
             <h2>Home</h2>
-            <p>This is our CGI implementation of a GET method, it is a simple calculator</p>
+            <p>This is our CGI implementation of a POST method</p>
             <a href="http://127.0.0.1:61001/cgi-bin/calc.html" class="button">Go to CGI</a>
         </div>
     </section>
