--- a/html/primera_pagina/index.html
+++ b/html/primera_pagina/index.html
@@ -93,6 +93,14 @@
         </div>
     </section>
 
+    <section id="POST" class="content">
+        <div>
+            <h2>POST</h2>
+            <p>This is a POST method example page</p>
+            <a href="http://127.0.0.1:61001/post.html" class="button">Go to POST</a>
+        </div>
+    </section>
+
 
 <footer>
     <p>&copy; 2024 WebServer. All rights reserved.</p>
