post esta terminado

--- a/html/primera_pagina/post.html
+++ b/html/primera_pagina/post.html
@@ -1,16 +1,33 @@
+<!-- <!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Subir Texto con POST</title>
+</head>
+<body>
+    <h1>Subir Texto</h1>
+    <form action="/tu_endpoint" method="POST">
+        <label for="text">Escribe tu texto:</label><br>
+        <textarea id="text" name="text" rows="4" cols="50"></textarea><br><br>
+        <input type="submit" value="Enviar">
+    </form>
+</body>
+</html> -->
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enviar Texto con POST</title>
+    <title>Subir Archivos</title>
 </head>
 <body>
-    <h1>Enviar Texto</h1>
-    <form action="/tu_endpoint" method="POST" enctype="application/octet-stream">
-        <label for="content">Ingresa tu texto:</label><br>
-        <textarea id="content" name="content" rows="4" cols="50"></textarea><br><br>
-        <input type="submit" value="Enviar">
+    <h1>Subir Archivos</h1>
+    <form action="/tu_endpoint" method="POST" enctype="multipart/form-data">
+        <label for="file">Selecciona un archivo:</label><br>
+        <input type="file" id="file" name="file"><br><br>
+        <input type="submit" value="Subir">
     </form>
 </body>
 </html>
