Webserv casi hecho

--- a/html/segunda_pagina/index.html
+++ b/html/segunda_pagina/index.html
@@ -81,18 +81,9 @@
         <div>
             <h2>Home</h2>
             <p>This is our CGI implementation of a POST method</p>
-            <a href="http://127.0.0.1:61001/cgi-bin/calc.html" class="button">Go to CGI</a>
+            <a href="http://127.0.0.1:61002/cgi-bin/postcgi.html" class="button">Go to CGI</a>
         </div>
     </section>
-
-    <section id="Redirection" class="content">
-        <div>
-            <h2>Redirection</h2>
-            <p>This is a redirection to the 42 urduliz webpage</p>
-            <a href="http://127.0.0.1:61001/goto42" class="button">Go to 42</a>
-        </div>
-    </section>
-
 
 <footer>
     <p>&copy; 2024 WebServer. All rights reserved.</p>
