--- a/html/segunda_pagina/cgi-bin/postcgi.html
+++ b/html/segunda_pagina/cgi-bin/postcgi.html
@@ -42,7 +42,7 @@
 </head>
 <body>
     <div class="calculator">
-        <form action="calc.html" method="get">
+        <form action="calc.html" method="post">
             <input type="text" name="num1" placeholder="Enter first number" required>
             <select name="operation" required>
                 <option value="+">+</option>
